--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "awesomeproject",
+  "name": "amobilelist3",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "webfix": "NODE_OPTIONS=--openssl-legacy-provider expo start --web"
   },
   "dependencies": {
     "@react-navigation/native-stack": "^6.9.8",
@@ -14,7 +15,10 @@
     "expo-network": "^5.0.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-dom": "18.1.0",
+    "react-native-web": "~0.18.9",
+    "@expo/webpack-config": "^0.17.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
